@@ -4,6 +4,7 @@ import com.google.gson.GsonBuilder;
 import dev.syoritohatsuki.fstatsapi.config.ConfigManager;
 import dev.syoritohatsuki.fstatsapi.dto.Metrics;
 import dev.syoritohatsuki.fstatsapi.logs.LogManager;
+import net.fabricmc.api.EnvType;
 import net.fabricmc.loader.api.FabricLoader;
 import net.minecraft.SharedConstants;
 import net.minecraft.server.dedicated.ServerPropertiesHandler;
@@ -11,6 +12,8 @@ import net.minecraft.server.dedicated.ServerPropertiesHandler;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Paths;
 import java.util.Map;
@@ -18,6 +21,8 @@ import java.util.Map;
 import static java.util.stream.Collectors.toMap;
 
 public class Request {
+
+    private static final String HIDDEN_LOCATION_CODE = "XXX";
 
     private static Map<Integer, String> getProjects() {
         return FabricLoader.getInstance().getAllMods().stream().filter(modContainer -> modContainer.getMetadata().getCustomValue("fstats") != null).collect(toMap(modContainer -> modContainer.getMetadata().getCustomValue("fstats").getAsNumber().intValue(), modContainer -> modContainer.getMetadata().getVersion().getFriendlyString()));
@@ -27,8 +32,9 @@ public class Request {
         return SharedConstants.getGameVersion().getName();
     }
 
-    private static boolean getOnlineMode() {
-        return ServerPropertiesHandler.load(Paths.get("server.properties")).onlineMode;
+    private static Boolean getOnlineMode() {
+        if (isServerSide()) return ServerPropertiesHandler.load(Paths.get("server.properties")).onlineMode;
+        else return null;
     }
 
     private static char getOperatingSystem() {
@@ -41,19 +47,18 @@ public class Request {
 
     private static String getLocation() {
 
-        if (ConfigManager.read().isLocationHide()) return "unknown";
+        if (ConfigManager.read().isLocationHide()) return HIDDEN_LOCATION_CODE;
 
         try {
-            URL ip = new URL("https://checkip.amazonaws.com/");
-            URL location = new URL("https://ip2c.org/" + new BufferedReader(new InputStreamReader(ip.openStream())).readLine());
+            URL location = new URI("https://ip2c.org/self").toURL();
             String response = new BufferedReader(new InputStreamReader(location.openStream())).readLine();
-            return response.split(";")[3];
-        } catch (IOException e) {
+            return response.split(";")[2];
+        } catch (IOException | URISyntaxException e) {
             if (ConfigManager.read().getMessages().isWarningsEnabled()) {
                 LogManager.logger.warn("Can't convert IP to location");
                 LogManager.logger.warn(e);
             }
-            return "unknown";
+            return HIDDEN_LOCATION_CODE;
         }
     }
 
@@ -62,7 +67,11 @@ public class Request {
         return fabricApi.map(modContainer -> modContainer.getMetadata().getVersion().getFriendlyString()).orElse(null);
     }
 
+    static boolean isServerSide() {
+        return FabricLoader.getInstance().getEnvironmentType() == EnvType.SERVER;
+    }
+
     public static String getJson() {
-        return new GsonBuilder().setPrettyPrinting().create().toJson(new Metrics(getProjects(), new Metrics.Metric(getMinecraftVersion(), getOnlineMode(), getOperatingSystem(), getLocation(), getFabricApiVersion())));
+        return new GsonBuilder().create().toJson(new Metrics(getProjects(), new Metrics.Metric(getMinecraftVersion(), getOnlineMode(), getOperatingSystem(), getLocation(), getFabricApiVersion(), isServerSide())));
     }
 }
